--- a/autNAuthZ/package.json
+++ b/autNAuthZ/package.json
@@ -8,6 +8,7 @@
     "anymatch": "^3.1.3",
     "array-flatten": "^1.1.1",
     "balanced-match": "^1.0.2",
+    "bcrypt": "^5.1.1",
     "binary-extensions": "^2.3.0",
     "body-parser": "^1.20.3",
     "brace-expansion": "^1.1.11",
@@ -110,9 +111,8 @@
     "webidl-conversions": "^7.0.0",
     "whatwg-url": "^13.0.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
